Added Spect Composer

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -29,7 +29,8 @@
   <!-- Use webpack css loader or we don't care ? -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+
+  <style src="vue-pnotify/dist/vue-pnotify.css"></style>
 </head>
 
 <body>
